cloud-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: summer-mc-info
  labels:
    app: summer-mc-info
    service: web
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: summer-mc-info
  template:
    metadata:
      labels:
        app: summer-mc-info
        service: web
    spec:
      containers:
        - name: summer-mc-info
          image: quay.io/uface/summer-mc-info:1.1
          ports:
            - containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
          lifecycle:
            preStop:
              exec:
                command: ["/usr/sbin/nginx","-s","quit"]
---
apiVersion: v1
kind: Service
metadata:
  name: summer-mc-info
  labels:
    service: web
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: summer-mc-info
---
apiVersion: v1
kind: Service
metadata:
  name: ace-summer-minecraft-dynmap
  namespace: ace-official
  labels:
    service: game
spec:
  ports:
    - port: 8123
      targetPort: 8123
      protocol: TCP
      name: dynmap
  selector:
    app: ace-summer-minecraft
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: summer-mc-info
  labels:
    service: web
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - mc.uf-ace.com
      secretName: summer-mc-info-tls
  rules:
    - host: mc.uf-ace.com
      http:
        paths:
          - path: /
            backend:
              serviceName: summer-mc-info
              servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dynmap-mc
  labels:
    service: web
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Content-Security-Policy: default-src 'none'; script-src 'self' 'unsafe-inline'; style-src 'self'; img-src 'self' data:; connect-src 'self'; font-src 'self' data:; base-uri 'none'; form-action 'self'; frame-ancestors 'none'; navigate-to https:; block-all-mixed-content";
spec:
  tls:
    - hosts:
        - dynmap.uf-ace.com
      secretName: dynmap-mc-tls
  rules:
    - host: dynmap.uf-ace.com
      http:
        paths:
          - path: /
            backend:
              serviceName: ace-summer-minecraft-dynmap
              servicePort: 8123
